deploy/k8/misc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: biomes-primary
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: biomes
    networking.gke.io/managed-certificates: "biomes-v3,biomes-v4"
    kubernetes.io/ingress.global-static-ip-name: biomes-primary
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
          - path: /api/assets
            pathType: Prefix
            backend:
              service:
                name: asset
                port:
                  name: http
          - path: /ro-sync/
            pathType: Prefix
            backend:
              service:
                name: ro-sync
                port:
                  name: http
          - path: /sync/
            pathType: Prefix
            backend:
              service:
                name: sync
                port:
                  name: http
          - path: /sync/oob
            pathType: Prefix
            backend:
              service:
                name: oob
                port:
                  name: http
          - path: /beta-sync/
            pathType: Prefix
            backend:
              service:
                name: sync
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: biomes-internal
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: biomes
    networking.gke.io/managed-certificates: "biomes-internal-v2"
    kubernetes.io/ingress.global-static-ip-name: biomes-internal
spec:
  rules:
    - host: dash.internal.biomes.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: http
    - host: prom.internal.biomes.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-ui
                port:
                  name: http
